A lot of updates and fixes on checkout, offers and added features for admin dashboard
